--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,10 @@ dependencies:
     sdk: flutter
   build_runner: ^2.1.7
   json_annotation: ^4.6.0
-  provider: ^6.0.3
   cached_network_image: ^3.2.1
   shimmer: ^2.0.0
   dio: ^4.0.6
+  flutter_bloc: ^8.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
